# model-eval-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api-overview.md  development.md  generate-report.md  getting-started.md  output-formats.md  task-inference.md  tasks.md
docs/images/: README.md
evalreport/: __init__.py
evalreport/classification/: __init__.py  report.py
evalreport/clustering/: __init__.py  report.py
evalreport/core/: base_report.py  entrypoints.py  task_inference.py
evalreport/nlp/: __init__.py  text_classification.py  text_generation.py
evalreport/ranking/: __init__.py  report.py
evalreport/regression/: __init__.py  report.py
evalreport/timeseries/: __init__.py  report.py
evalreport/vision/: __init__.py  detection.py  image_classification.py  segmentation.py
tests/: conftest.py  test_base_report.py  test_classification_comprehensive.py  test_classification_report.py  test_clustering_report.py  test_detection_map.py  test_generate_report.py  test_image_classification_report.py  test_nlp_reports.py  test_ranking_report.py  test_regression_comprehensive.py  test_regression_report.py  test_report_outputs.py  test_task_inference.py  test_timeseries_report.py  test_vision_reports.py
tmp/: README.md  run_all_tasks.py
