[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-eval-toolkit"
version = "0.1.0"
description = "Unified ML evaluation framework for classification, regression, clustering, time series, NLP, CV, and recommendation systems."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Raahul Krishna Durairaju", email = "rahulkrish28@gmail.com" },
]
keywords = ["machine-learning", "evaluation", "metrics", "nlp", "computer-vision", "time-series", "ranking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "coverage[toml]>=7",
]

[project.urls]
Homepage = "https://github.com/RAAHUL-tech/model-eval-toolkit"
Repository = "https://github.com/RAAHUL-tech/model-eval-toolkit"
Issues = "https://github.com/RAAHUL-tech/model-eval-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalreport*"]
